
Version 0.9	- xx August 2001
  * Fix method and attribute checks for None and Ellipsis
  * Fix spurious warnings when object attribute has same name as class
  * Add constants together on stack when get + to avoid some spurious warnings
  * Change default behaviour to not warn about missing doc strings
  * Add -Q/--quiet to be real quiet, only output warning msgs, nothing else
  * Add -y/--classattr config option (warning was not configurable before)
  	(warn if class attribute doesn't exist)
  * Add -x/--miximport config option (warning was not configurable before)
  	(warn if mixing: import/from ... import)
  * Add -u/--callinit config option (warning was not configurable before)
  	(warn if Subclass.__init__() not called)
  * Add warnings for --, ++, ~~:
  	"Operator (%s) doesn't exist, statement has no effect"
  * Fix Object (x) has no attribute warnings for Python 2.2a1 built-in types

Version 0.8.1	- 9 August 2001
  * Fix internal error when referencing a list constant:  [1,2,3][1]
  * Fix internal error for Python 1.5 not catching unicode syntax error
  * Fix deprecation warning for Python 2.2a1 with xrange
  * Fix spurious warning (No module attribute) when doing import x.y as y
  * Fix spurious warning (Base __init__() not called) when using *args or **kw
  * Fix 'No module attribute' warning when doing:  import foo.bar as bar
  * Spell overridden write

Version 0.8	- 6 August 2001
  * Add check for accessing list as list[1,2], should be slice 1:2
  * Add -J/maxargs to warn when using too many arguments
  * Add -K/maxlocals to warn when using too many local variables
  * Add -D/intdivide to warn when using integer division
  * Add -O/objattrs to warn when using object.attribute that doesn't exist
  * Add -M/reimportself to warn when a module imports itself
  * Add -E/unusednames to provide a list of unused names to ignore
	(default is: [ '_', 'empty', 'unused' ])
  * Major refactoring of warn.py -> utils, msgs, Warning, CodeChecks