@@ -71,3 +71,4 @@ INTEGER_DIVISION = "Using integer division (%s / %s) may return integer or float
 USING_TUPLE_ACCESS_TO_LIST = "Using a tuple instead of slice as list accessor for (%s)"
 
 STMT_WITH_NO_EFFECT = "Operator (%s) doesn't exist, statement has no effect"
+LIST_APPEND_ARGS = "[].append() only takes 1 argument in Python 1.6 and above for (%s)"
